# reviewpulse-ai

./: .dockerignore  .env.example  .gcloudignore  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.sh
.rag_cache/: manifest.json
.streamlit/: config.toml
dags/: dag_ingestion.py  dag_reprocessing.py  reviewpulse_airflow_common.py
deploy/gcp/: cloudbuild.api.yaml  redeploy_api.ps1
docker/airflow/: .env.deploy.example  Dockerfile  bootstrap-project-venv.sh  docker-compose.deploy.yaml  docker-compose.yaml  run-airflow-standalone.sh
docker/api/: Dockerfile
docs/: ReviewPulse_AI_Final_Project_Proposal.docx
poc/: aspect_extraction.py  eda_amazon.py  normalize_schema.py  reddit_connector.py  youtube_extractor.py
src/: __init__.py
src/api/: main.py
src/app_logic/: __init__.py  cache.py  fake_detection.py  guardrails.py  hitl.py
src/common/: __init__.py  amazon_titles.py  run_context.py  settings.py  spark_runtime.py  storage.py  structured_logging.py
src/frontend/: app.py
src/ingestion/: __init__.py  amazon.py  common.py  ebay.py  ifixit.py  yelp.py  youtube.py
src/insights/: __init__.py  app_analytics.py  arrow_metrics.py  data_profile.py  normalization_explainer.py  quality_metrics.py  source_comparison.py
tests/: test_airflow_dag.py  test_api_embeddings.py  test_app_analytics.py  test_app_logic.py  test_data_insights.py  test_health.py  test_ml_backends.py  test_normalization.py  test_retrieval.py  test_sentiment_scoring.py  test_snowflake_loader.py  test_source_ingestion.py  test_spark_runtime.py  test_storage_foundation.py
(+15 files in other folders)
