[tool.poetry]
name = "reviewpulse-ai"
version = "0.1.0"
description = "Cross-platform product review intelligence with grounded search and chat"
authors = ["Piyush Kunjilwar <kunjilwar.p@northeastern.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.3"
matplotlib = "^3.10.1"
requests = "^2.32.3"
pydantic = "^2.11.3"
fastapi = "^0.115.12"
uvicorn = { version = "^0.34.2", extras = ["standard"] }
streamlit = "^1.44.1"
pyspark = "^4.0.0"
sentence-transformers = "^4.1.0"
chromadb = "^1.0.8"
anthropic = "^0.52.2"
python-dotenv = "^1.1.0"
praw = "^7.8.1"
youtube-transcript-api = "^1.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
ruff = "^0.11.6"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"